--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
   "dependencies": {
     "jest": "^29.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^8.28.0",
+    "eslint-config-google": "^0.14.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   },
   "repository": {
     "type": "git",
