--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "wd-201 assignments",
   "main": "todo.js",
   "dependencies": {
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "minimist": "^1.2.7",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.7"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
     "eslint-config-google": "^0.14.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sequelize-cli": "^6.5.2"
   },
   "scripts": {
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "jest --detectOpenHandles"
   },
   "lint-staged": {
     "*.js": [
