--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "aicte_lite_pupilfirst_wd-201-2022_todo",
   "version": "1.0.0",
   "description": "wd-201 assignments",
-  "main": "todo.js",
+  "main": "index.js",
   "dependencies": {
-    "jest": "^29.3.1",
-    "minimist": "^1.2.7",
+    "express": "^4.18.2",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.7"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
-    "eslint-config-google": "^0.14.0",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   },
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
