--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,7 @@
   "description": "wd-201 assignments",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.8.0",
     "sequelize": "^6.25.7"
@@ -13,6 +14,7 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.22",
     "prettier": "^2.7.1",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.3"
@@ -29,7 +31,7 @@
     ]
   },
   "repository": {
-    "type": "git",
+    "type": "git", 
     "url": "git+https://github.com/py563/AICTE_Lite_PupilFirst_WD-201-2022_Todo.git"
   },
   "author": "py563",
