--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -24,7 +24,7 @@
     "start:prod": "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "prepare": "husky install .husky"
+    "prepare": "cd .. && husky install todo-app/.husky"
   },
   "lint-staged": {
     "*.js": [
