--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,9 +4,13 @@
   "description": "wd-201 assignments",
   "main": "index.js",
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.25.7",
     "tiny-csrf": "^1.1.3"
