--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,7 @@
   "description": "wd-201 assignments",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
