--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cypress": "^12.17.4",
     "eslint": "^8.28.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
@@ -33,7 +34,9 @@
     "start:prod": "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "prepare": "cd .. && husky install todo-app/.husky"
+    "prepare": "cd .. && husky install todo-app/.husky",
+    "cy:preopen": "npm run pretest && NODE_ENV=test nodemon -e js,ejs",
+    "cy:open": "npm run test && NODE_ENV=test cypress open"
   },
   "lint-staged": {
     "*.js": [
